<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aravi.datastorage.MainActivity">

    <Button
        android:id="@+id/preferenceButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="57dp"
        android:onClick="preferencesOnClick"
        android:text="@string/preferences_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/sqliteButtonId"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/sqliteButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="73dp"
        android:layout_marginTop="83dp"
        android:onClick="sqliteOnclick"
        android:text="@string/sqlite_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/closeButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="81dp"
        android:text="@string/close_button"
        app:layout_constraintRight_toLeftOf="@+id/sqliteButtonId"
        app:layout_constraintTop_toBottomOf="@+id/preferenceButtonId"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
