<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aravi.datastorage.PreferencesActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="177dp"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/book_author"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="63dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/book_name"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="126dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/description_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/descriptionId"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="172dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/booknameID"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/authorNameId"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="46dp"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/booknameID"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="7dp"
        android:background="@android:color/darker_gray"
        android:defaultFocusHighlightEnabled="true"
        android:ems="10"
        android:focusable="auto"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        app:layout_constraintLeft_toRightOf="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/authorNameId"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/saveButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveData"
        android:text="@string/saveButton"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="71dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="103dp" />

</android.support.constraint.ConstraintLayout>
